# jpmidi

./: .gitignore
jpmidi/: AUTHORS  HISTORY  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  configure.scan
jpmidi/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
jpmidi/config/: Makefile  Makefile.am  Makefile.in
jpmidi/src/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.h  commands.c  commands.h  dump.c  dump.h  elements.c  elements.h  except.c  except.h  jackclient.c  jackclient.h  jpmidi  jpmidi.c  jpmidi.h  main.c  main.h  md.h  mdutil.c  midi.h  midiread.c  tcpserver.c  tcpserver.h
jpmidi/src/.deps/: cmdline.Po  commands.Po  dump.Po  elements.Po  except.Po  jackclient.Po  jpmidi.Po  main.Po  mdutil.Po  midiread.Po  tcpserver.Po
